# iot_basemant-system

./: .gitignore  CMakeLists.txt  DOLNY RJ-45.txt  OnDataSet_functions.cpp  controler.cpp  main.cpp  main.py  niebieski 1 supły.txt  registers.cpp  temp.cpp
harmonogram/: harmonogram.cpp
libs/: pzem.cpp
modules/: 24aa01.cpp  pzem.cpp
py/: communication.py  internet.py  main.py
uart/: uart_communication_other_board.cpp
